# umbrella

./: .clang-format  .gitignore  CMakeLists.txt
data/: FragShader.glsl  VertexShader.glsl
data/meshes/: suzanne_smooth.mtl
data/shaders/: FragShader.glsl  VertexShader.glsl
src/: main.cpp
src/umbrella/: UmbrellaApplication.cpp  UmbrellaApplication.h
src/umbrella/gfx/: ShaderProgram.cpp  ShaderProgram.h
src/umbrella/systems/: Camera.cpp  Camera.h
src/umbrella/util/: File.cpp  File.h  Framework.h
